--- a/react/index.html
+++ b/react/index.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <input
-      type="date"
-      name=""
-      id="startDate"
-      min="2022-12-24"
-      max="2023-07-19" />
-    <input type="date" name="" id="endDate" min="2022-12-24" max="2023-07-19" />
-    <select name="" id="DataType">
-      <option value="1"></option>
-      <option value="2"></option>
-      <option value="3"></option>
-      <option value="4"></option>
-      <option value="5"></option>
-    </select>
-    <button id="getUsermap">get usermap</button>
-    <button id="getData">get data</button>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Vite + React + TS</title>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
